src/main/java/com/example/Restaurante/config/error/RestExceptionInfo.java
package com.example.Restaurante.config.error;

import lombok.Getter;
import lombok.Setter;
import org.springframework.http.HttpStatus;

@Getter
@Setter
public class RestExceptionInfo {
    private final HttpStatus status;
    private final int code;
    private final String message;
    private final String developerMessage;
    private final String moreInfoUrl;
    private final Throwable throwable;

    public RestExceptionInfo(HttpStatus status, int code, String message, String developerMessage, String moreInfoUrl,
                             Throwable throwable) {
        if (status == null) {
            throw new NullPointerException("HttpStatus argument cannot be null.");
        }
        this.status = status;
        this.code = code;
        this.message = message;
        this.developerMessage = developerMessage;
        this.moreInfoUrl = moreInfoUrl;
        this.throwable = throwable;
    }

    public RestExceptionInfo(HttpStatus status, int code, String message) {
        if (status == null) {
            throw new NullPointerException("HttpStatus argument cannot be null.");
        }
        this.status = status;
        this.code = code;
        this.message = message;
        this.developerMessage = null;
        this.moreInfoUrl = null;
        this.throwable = null;
    }
}
